@@ -99,8 +99,8 @@ bool timerCB(LFSTK_applicationClass *p,void* ud)
 	if(cpuButton!=NULL)
 		updateCpuStats();
 
-	if((windowAll!=NULL) || (windowDesk!=NULL))
-		updateWindowMenu();
+	//if((windowAll!=NULL) || (windowDesk!=NULL))
+	//	updateWindowMenu();
 
 	if(scwindow!=NULL)
 		updateSlider();
